  * New upstream release.
  * Ship /var/lib/syslog-ng in the syslog-ng-core package, instead of
    creating it in the init script. Thanks Michael Biebl
    <biebl@debian.org> for the report & assistance. (Closes: #699942)
  * Do not wait for syslog-ng to settle down during installation / update.
    This also fixes installing via debootstrap and a fake
    start-stop-daemon. (Closes: #714254)

 -- Gergely Nagy <algernon@madhouse-project.org>  Mon, 01 Jul 2013 12:27:05 +0200

syslog-ng (3.3.10-1~mhp1) unstable; urgency=low

  [ Gergely Nagy <algernon@madhouse-project.org> ]
  * New upstream release.

 -- Gergely Nagy <algernon@madhouse-project.org>  Tue, 04 Jun 2013 13:43:31 +0200

syslog-ng (3.3.9-1~mhp1) unstable; urgency=low

  [ Gergely Nagy <algernon@madhouse-project.org> ]
  * New upstream release.
  * Fix the systemd unit file handling, many thanks to Dominic Hargreaves
    <dom@earth.li> and Michael Biebl <biebl@debian.org> for the
    assistance.

 -- Gergely Nagy <algernon@madhouse-project.org>  Sun, 14 Apr 2013 10:02:35 +0200

syslog-ng (3.3.8-1~mhp1) unstable; urgency=low

  [ Gergely Nagy <algernon@madhouse-project.org> ]
  * New upstream release.
  * Use the standard /var/log/mail.{info,err,warn} location for the
    various mail-related logs. (Closes: #692056)
  * Do not forcibly remove the systemd service files, that code is not
    needed anymore.
  * Use /dev/ttyva on kFreeBSD as the target of the d_console_all
    destination. (Closes: #697042)

 -- Gergely Nagy <algernon@madhouse-project.org>  Mon, 21 Jan 2013 10:04:22 +0100

syslog-ng (3.3.7-1~mhp1) unstable; urgency=low

  [ Gergely Nagy <algernon@madhouse-project.org> ]
  * New upstream release.
  * Instead of installing systemd service file symlinks, install a
    conffile, that includes the real service file. (Closes: #690067)
  * Add Origin and Bugs fields to the control file.

 -- Gergely Nagy <algernon@madhouse-project.org>  Wed, 31 Oct 2012 07:57:37 +0100
