@@ -1,2 +1,0 @@
-/etc/systemd/system/multi-user.target.wants/
-/lib/systemd/system/
